--- a/bin/activeharmonyUI.css
+++ b/bin/activeharmonyUI.css
@@ -16,55 +16,32 @@
  * You should have received a copy of the GNU Lesser General Public License
  * along with Active Harmony.  If not, see <http://www.gnu.org/licenses/>.
  */
-#ifndef __HSERVER_H__
-#define __HSERVER_H__
+#plot_area
+{
+  float: right;
+  width: 640px;
+  height: 480px;
+  margin-right: 15px;
+}
 
-/***
- *
- * include system headers
- *
- ***/
-#include <stdlib.h>
-#include <sys/types.h>
-#include <sys/socket.h>
-#include <sys/time.h>
-#include <sys/stat.h>
-#include <arpa/inet.h>
-#include <netinet/in.h>
-#include <unistd.h>
-#include <string>
-#include <map>
+#table_area
+{
+  float: left;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
 
-#include <cstdio>
-#include <cstdlib>
-#include <iostream>
-#include <assert.h>
-#include <sstream>
-#include <set>
+table
+{
+  border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-// tcl/tk
-#include <tcl.h>
-
-/***
- *
- * include user defined headers
- *
- ***/
-#include "hutil.h"
-#include "hmesgs.h"
-#include "hsockutil.h"
-
-/***
- *
- * define macros
- *
- ***/
-#define SERVER_PORT 1977
-#define BUFF_SIZE 1024
-
-extern char code_flags_path[];
-extern Tcl_Interp *tcl_inter;
-
-string history_since(unsigned int);
-
-#endif /* __HSERVER_H__ */
+th, td
+{
+  border: 1px solid black;
+  text-align: right;
+  padding: 2px;
+}
