--- a/src/http/activeharmony.css
+++ b/src/http/activeharmony.css
@@ -16,6 +16,12 @@
  * You should have received a copy of the GNU Lesser General Public License
  * along with Active Harmony.  If not, see <http://www.gnu.org/licenses/>.
  */
+#refresh_row
+{
+  border: none;
+  text-align: center;
+}
+
 #plot_div
 {
   float: right;
